--- a/src/main/resources/dk/easv/exambelsign/homepage.fxml
+++ b/src/main/resources/dk/easv/exambelsign/homepage.fxml
@@ -21,15 +21,15 @@
                </children>
             </TextFlow>
             <Button layoutX="534.0" layoutY="14.0" mnemonicParsing="false" text="Logout" />
+            <Button layoutX="300.0" layoutY="50.0" mnemonicParsing="false" text="Users" />
+            <Button layoutX="226.0" layoutY="50.0" mnemonicParsing="false" text="Orders" />
          </children>
       </AnchorPane>
    </top>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button layoutX="14.0" layoutY="23.0" mnemonicParsing="false" text="Orders" />
-            <Button layoutX="14.0" layoutY="62.0" mnemonicParsing="false" text="Users" />
-         </children>
-      </AnchorPane>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
