--- a/src/main/resources/dk/easv/exambelsign/adminpage.fxml
+++ b/src/main/resources/dk/easv/exambelsign/adminpage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.AdminPageController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.AdminPageController">
    <top>
       <AnchorPane prefHeight="91.0" prefWidth="600.0" style="-fx-background-color: #004b88;" BorderPane.alignment="CENTER">
          <children>
@@ -21,8 +21,8 @@
                </children>
             </TextFlow>
             <Button fx:id="logoutBtn" layoutX="534.0" layoutY="14.0" mnemonicParsing="false" onAction="#logoutBtnClick" text="Logout" />
-            <Button layoutX="300.0" layoutY="50.0" mnemonicParsing="false" text="Users" />
-            <Button layoutX="226.0" layoutY="50.0" mnemonicParsing="false" text="Orders" />
+            <Button fx:id="UsersBtn" layoutX="300.0" layoutY="50.0" mnemonicParsing="false" onAction="#UsersBtnClick" text="Users" />
+            <Button fx:id="OrdersBtn" layoutX="226.0" layoutY="50.0" mnemonicParsing="false" onAction="#OrdersBtnClick" text="Orders" />
          </children>
       </AnchorPane>
    </top>
