--- a/src/main/resources/dk/easv/exambelsign/login.fxml
+++ b/src/main/resources/dk/easv/exambelsign/login.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.LoginController">
    <right>
       <AnchorPane prefHeight="400.0" prefWidth="398.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="enterUsernameField" layoutX="124.0" layoutY="154.0" promptText="Username" />
-            <TextField fx:id="enterPasswordField" layoutX="124.0" layoutY="187.0" promptText="Password" />
+            <TextField fx:id="enterPasswordField" layoutX="124.0" layoutY="187.0" onKeyPressed="#entahButtonPressed" promptText="Password" />
             <ImageView fitHeight="121.0" fitWidth="155.0" layoutX="121.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../Images/belman_logo_transparent.png" />
