--- a/src/main/resources/dk/easv/exambelsign/newuserpopup.fxml
+++ b/src/main/resources/dk/easv/exambelsign/newuserpopup.fxml
@@ -6,22 +6,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="394.0" prefWidth="293.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.NewUserController">
    <children>
       <Text layoutX="130.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New User" />
       <TextField fx:id="firstnameField" layoutX="103.0" layoutY="76.0" prefHeight="26.0" prefWidth="102.0" />
       <TextField fx:id="lastnameField" layoutX="103.0" layoutY="111.0" prefHeight="26.0" prefWidth="102.0" />
-      <TextField fx:id="usernameField" layoutX="103.0" layoutY="151.0" prefHeight="26.0" prefWidth="102.0" />
-      <TextField fx:id="passwordField" layoutX="103.0" layoutY="192.0" prefHeight="26.0" prefWidth="102.0" />
-      <Label layoutX="39.0" layoutY="155.0" text="Username" />
-      <Label layoutX="41.0" layoutY="196.0" text="Password" />
-      <Label layoutX="53.0" layoutY="235.0" text="Role" />
+      <TextField fx:id="usernameField" layoutX="104.0" layoutY="142.0" prefHeight="26.0" prefWidth="102.0" />
+      <TextField fx:id="passwordField" layoutX="103.0" layoutY="178.0" prefHeight="26.0" prefWidth="102.0" />
+      <Label layoutX="39.0" layoutY="146.0" text="Username" />
+      <Label layoutX="40.0" layoutY="182.0" text="Password" />
+      <Label layoutX="53.0" layoutY="217.0" text="Role" />
       <Label layoutX="37.0" layoutY="81.0" text="First Name" />
       <Label layoutX="38.0" layoutY="116.0" text="Last Name" />
-      <TextField fx:id="roleField" layoutX="103.0" layoutY="231.0" prefHeight="26.0" prefWidth="102.0" />
+      <TextField fx:id="roleField" layoutX="103.0" layoutY="212.0" prefHeight="26.0" prefWidth="102.0" />
       <Button fx:id="finalCreateBtn" layoutX="129.0" layoutY="274.0" mnemonicParsing="false" onAction="#finalCreateBtnClick" text="Create" />
       <Button fx:id="cancelBtn" layoutX="15.0" layoutY="354.0" mnemonicParsing="false" onAction="#cancelBtnClick" text="Cancel" />
       <Label layoutX="66.0" layoutY="311.0" text="Error: Please biae0gnae0ng0egiae" />
+      <Label layoutX="48.0" layoutY="248.0" text="e-mail" />
+      <TextField fx:id="emailField" layoutX="103.0" layoutY="243.0" prefHeight="26.0" prefWidth="102.0" />
    </children>
 </AnchorPane>
