--- a/src/main/resources/dk/easv/exambelsign/editorderpopup.fxml
+++ b/src/main/resources/dk/easv/exambelsign/editorderpopup.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="dk.easv.exambelsign.GUI.EditOrderController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="394.0" prefWidth="293.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.EditOrderController">
+    <children>
+        <Text layoutX="118.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Order" />
+        <TextField fx:id="numberField" layoutX="95.0" layoutY="74.0" prefHeight="26.0" prefWidth="102.0" />
+        <TextField fx:id="nameField" layoutX="95.0" layoutY="110.0" prefHeight="26.0" prefWidth="102.0" />
+        <TextField fx:id="apprbyField" layoutX="95.0" layoutY="141.0" prefHeight="26.0" prefWidth="102.0" />
+        <TextField fx:id="apprstatField" layoutX="95.0" layoutY="177.0" prefHeight="26.0" prefWidth="102.0" />
+        <Label layoutX="14.0" layoutY="146.0" text="Approved By" />
+        <Label layoutX="6.0" layoutY="181.0" text="Approval Status" />
+        <Label layoutX="14.0" layoutY="79.0" text="Order Number" />
+        <Label layoutX="20.0" layoutY="115.0" text="Order Name" />
+        <Button fx:id="finalCreateBtn" layoutX="129.0" layoutY="274.0" mnemonicParsing="false" onAction="#finalCreateBtnClick" text="Create" />
+        <Button fx:id="cancelBtn" layoutX="15.0" layoutY="354.0" mnemonicParsing="false" onAction="#cancelBtnClick" text="Cancel" />
+        <Label layoutX="66.0" layoutY="311.0" text="Error: Please biae0gnae0ng0egiae" />
+        <Button fx:id="selectBtn" layoutX="210.0" layoutY="207.0" mnemonicParsing="false" onAction="#selectBtnClick" prefHeight="26.0" prefWidth="69.0" text="Select " />
+        <Text layoutX="29.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Photos" />
+        <TextField fx:id="photoField" layoutX="95.0" layoutY="207.0" prefHeight="26.0" prefWidth="102.0" />
+    </children>
 </AnchorPane>
