--- a/src/main/resources/dk/easv/exambelsign/neworderpopup.fxml
+++ b/src/main/resources/dk/easv/exambelsign/neworderpopup.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="394.0" prefWidth="293.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.NewOrderController">
+<AnchorPane prefHeight="394.0" prefWidth="293.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.exambelsign.GUI.NewOrderController">
     <children>
         <Text layoutX="118.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Order" />
         <TextField fx:id="numberField" layoutX="95.0" layoutY="74.0" prefHeight="26.0" prefWidth="102.0" />
@@ -20,5 +20,8 @@
         <Button fx:id="finalCreateBtn" layoutX="129.0" layoutY="274.0" mnemonicParsing="false" onAction="#finalCreateBtnClick" text="Create" />
         <Button fx:id="cancelBtn" layoutX="15.0" layoutY="354.0" mnemonicParsing="false" onAction="#cancelBtnClick" text="Cancel" />
         <Label layoutX="66.0" layoutY="311.0" text="Error: Please biae0gnae0ng0egiae" />
+      <Button fx:id="selectBtn" layoutX="210.0" layoutY="207.0" mnemonicParsing="false" onAction="#selectBtnClick" prefHeight="26.0" prefWidth="69.0" text="Select " />
+      <Text layoutX="29.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Photos" />
+      <TextField fx:id="photoField" layoutX="95.0" layoutY="207.0" prefHeight="26.0" prefWidth="102.0" />
     </children>
 </AnchorPane>
